<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.maskulka.zadanieo2.ui.activation.ActivationViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewAnimator
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateFirstView="false"
            app:displayedChild="@{viewModel.loadingState}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- INIT-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/activateFragmentActivateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="@{() -> viewModel.onActivateButtonClick()}"
                    android:text="@string/activate" />

            </FrameLayout>

            <!-- LOADING-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/card_activation_in_progress"
                    android:textSize="18sp" />

            </FrameLayout>

            <!-- SUCCESS-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/card_activation_success"
                    android:textSize="18sp" />

            </FrameLayout>

            <!-- ERROR-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_activation_error_title"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/activateFragmentRetryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{() -> viewModel.onRetryButtonClick()}"
                    android:text="@string/retry" />

            </LinearLayout>

        </ViewAnimator>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:toolbarTitle="@{@string/activate}" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>