<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.maskulka.zadanieo2.ui.dashboard.DashboardViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dashboardStateTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/current_state"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/dashboardStateTextView"
            app:layout_constraintEnd_toEndOf="@+id/dashboardStateTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/dashboardStateTextView" />

        <TextView
            android:id="@+id/dashboardStateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@{viewModel.state}"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ACTIVATED" />

        <Button
            android:id="@+id/dashboardResetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.onResetButtonClick()}"
            android:text="@string/reset"
            android:visibility="@{viewModel.isResetButtonVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="@+id/dashboardScratchButton"
            app:layout_constraintStart_toStartOf="@+id/dashboardScratchButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dashboardScratchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.isScratchButtonEnabled}"
            android:onClick="@{() -> viewModel.onScratchButtonClick()}"
            android:text="@string/scratch"
            app:layout_constraintBottom_toTopOf="@+id/dashboardActivateButton"
            app:layout_constraintEnd_toEndOf="@+id/dashboardActivateButton"
            app:layout_constraintStart_toStartOf="@+id/dashboardActivateButton" />

        <Button
            android:id="@+id/dashboardActivateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:enabled="@{viewModel.isActivateButtonEnabled}"
            android:onClick="@{() -> viewModel.onActivateButtonClick()}"
            android:text="@string/activate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>